--- a/3. 마스크를 쓰고 있나요/css/cursor.css
+++ b/3. 마스크를 쓰고 있나요/css/cursor.css
@@ -21,6 +21,7 @@ body {
   margin: -60px 0 0 -60px;
   background: #a300a8;
   border-radius: 50%;
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -53,21 +54,26 @@ body {
 }
 
 .gate-box .bottom .inner {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
 }
 
 .gate-box .bottom a {
-  display: inline-block;
-  width: 100%;
-  box-sizing: inherit;
   font-size: 20px;
-  text-align: center;
   color: #fff;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
   text-decoration: none;
   padding: 20px 0;
+  -webkit-transition: all .3s ease;
   transition: all .3s ease;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 .gate-box .bottom a:hover {
